some progress in packages-api
